# RAG

./: .gitignore  LICENSE  README.md  generate_queries.ipynb  ingestion.py  pyproject.toml  rag_pipeline.py  requirements.txt  test.ipynb  testRAGApp.ipynb
notebooks/: generate_queries_CDP.ipynb  generate_queries_adk_docs.ipynb  generate_queries_alice.ipynb  generate_queries_romeo.ipynb
tests/: longADKDocsTestCases.csv  longAliceTestCases.csv  longCDPTestCases.csv  simpleAliveTestCases.csv
