[project]
name = "rag"
version = "0.0.1"
description = "Simple RAG demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.1",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.6",
    "langchain-text-splitters>=0.3.9",
    "langchain[google-genai]>=0.3.27",
    "langgraph>=0.6.3",
    "pypdf>=5.9.0",
    "sentence-transformers>=5.0.0",
    "uvicorn>=0.35.0",
]
